fix: spacing on partners section

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,8 +44,12 @@ h1 {
 }
 
 h4 {
-    font-size: 32px;
     font-weight: 700;
+}
+
+.min-title {
+    font-weight: 700;
+    font-size: 26px;
 }
 
 .container {
@@ -322,7 +326,11 @@ p.strong.big {
 .partners .col-4 {
     
     p {
-        padding: 2rem 0;
+        padding: 1rem 0 2rem;
+    }
+    
+    p.min-title {
+        padding: 2rem 0 1rem;
     }
 }
 
